2006-12-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/XGCairoGlitzSurface.m (-initWithDevice:): Correct
	getting of visual ID. 
	Patch by: Xavier Glattard <xavier.glattard@free.fr>.
	
2006-12-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XGServerEvent.m: Fix incorrect setting for second help
	key.
	* Documentation/Back/DefaultsSummary.gsdoc: Document mappings of
	X keys to help keys.

2006-11-25  Matt Rice  <ratmice@gmail.com>

	* Source/art/ftfont.m (appendBezierPathWithGlyphs:count:toPath:):
	Uncomment code and switch to using FTC_Manager_LookupSize.

2006-11-19 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/winlib/WIN32GState.m:
	* Source/art/path.m:
	* Source/art/ftfont.m:
	* Source/art/ftfont-old.m:
	* Source/art/shfill.m:
	* Source/art/image.m:
	* Source/xlib/XGGState.m:
	* Source/x11/XGServerWindow.m:
	Use accessor method (-transformStruct) to get at affine transform
	internals.  Make art code closer to coding standards in an attempt
	to improve readability.

2006-11-15  Nicola Pero  <nicola.pero@meta-innovation.com>
	
	Notice: you should now use 'make DESTDIR=/tmp/xxx install' if you
	want to relocate all the installation into /tmp/xxx/
	* GNUmakefile.postamble: Use DESTDIR instead of INSTALL_ROOT_DIR
	everywhere.

	* Documentation/Back/GNUmakefile: Use GNUSTEP_INSTALLATION_DOMAIN
	instead of GNUSTEP_INSTALLATION_DIR.
	* Documentation/GNUmakefile: Same change.
	* Fonts/GNUmakefile: Same change.
	* Source/GNUmakefile: Same change.
	* Source/art/GNUmakefile: Same change.
	* Source/cairo/GNUmakefile: Same change.
	* Source/gsc/GNUmakefile: Same change.
	* Source/x11/GNUmakefile: Same change.
	* Source/xdps/GNUmakefile: Same change.
	* Source/xlib/GNUmakefile: Same change.
	* Source/win32/GNUmakefile: Same change.
	* Source/winlib/GNUmakefile: Same change.
	* Tools/GNUmakefile: Same change.

2006-11-03 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/xlib/XGFont.m: Assume ascii encoding as a fallback if no