@@ -1,3 +1,14 @@
+2006-12-26 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Headers/cairo/XGCairoXImageSurface.h:
+	* Source/cairo/XGCairoXImageSurface.m (-initWithDevice:):  Use
+	XWindowBuffer to draw on.
+	* Source/cairo/CairoContext.m (+initializeBackend): Use
+	XGCairoXImageSurface as surface. 
+	* Source/cairo/CairoGState.m (-DPSimage:...:): Respect endianess,
+	when creating a cairo image surface.
+	Patch by Yen-Ju Chen <yjchenx@gmail.com>.
+	
 2006-12-19 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/cairo/XGCairoGlitzSurface.m (-initWithDevice:): Correct
